fixes for scrollbar hide

--- a/src/Containers/EditorSpace/Style.scss
+++ b/src/Containers/EditorSpace/Style.scss
@@ -26,4 +26,9 @@
   height: 100%;
   max-height: 100%;
   overflow: auto;
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+  &::-webkit-scrollbar {
+    display: none;
+  }
 }
